--- a/vue-styled-component-avancado/index.html
+++ b/vue-styled-component-avancado/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Paginacao modelo 01</title>
+    <title>styled-component-avancado</title>
   </head>
   <body>
     <div id="app"></div>
