--- a/v-bind, if, for, v-model e v-on/index.html
+++ b/v-bind, if, for, v-model e v-on/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Testes cvom if e for</title>
+    <title>Testes com if e for</title>
     <script src="https://unpkg.com/vue"></script>
   </head>
   <body>
